# agm

./: .gitignore  README.md  agm.py  pyproject.toml
.others/: main.py
src/agm/: __init__.py
src/agm/core/: __init__.py  action.py  ai.py  engine.py  observer.py  roll.py  scene.py  status.py  target.py  team.py  unit.py
src/agm/sny/: __init__.py  commands.py
src/agm/sny/statuses/: __init__.py  builtins.py  std.py
src/agm/sny/ui/: ai.py
tests/: main.py
tests/core/: test_roll.py
