[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agm"
version = "0.0.1"
authors = [
    { name = "Sikenasa", email="yeehawmoment978@gmail.com" },
]
description = "A tool to ease the tasks of GMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/sikenasa/agm"
