[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agm"
version = "0.0.1"
authors = [
    { name = "Sikenasa", email="yeehawmoment978@gmail.com" },
]
description = "A tool to ease the tasks of GMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/sikenasa/agm"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
cache_dir = ".cache/pytest"
python_files = ["test_*.py", "check_*.py"]
python_functions = ["test_*", "check_*"]

